alteração das descrições de como rodar.