@@ -1,10 +1,3 @@
-//Compilar as classes normalmente
-//Gerar Stubs (Calculadora_Stub.java e Calculadora_Stub.class) para comunicação remota com o comando a seguir
-//rmic -keep Calculadora
-
-//rodar setando as políticas de segurança
-//-Djava.security.manager garante que o gerenciador de segurança padrão está instalado e, portanto, o aplicativo está sujeito as verificações das política
-//java -Djava.security.manager -Djava.security.policy=server.policy ServidorRMI
 import java.net.MalformedURLException;
 import java.rmi.Naming;
 import java.rmi.RemoteException;
